סרגל עליון מוקטן

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -3,7 +3,8 @@
     <div class="header-container">
       <div class="logo-container">
         <h3 id="nextObject">
-          <img width="35" src="{{ site.baseurl }}/assets/images/logo.png" alt="סמל האתר">
+          <!-- הקטנת רוחב תמונה לגודל התואם את הכפתורים החדשים -->
+          <img width="28" src="{{ site.baseurl }}/assets/images/logo.png" alt="סמל האתר">
           <span class="site-title">שיר-בוט</span>
         </h3>
       </div>
@@ -13,7 +14,8 @@
         </a>
         <a class="right-item" href="https://nhlocal.github.io/" title="לשאר התוכנות של היוצר">
           <div class="nhlocal-icon-wrapper">
-            <img class="nhlocal-icon" width="27" src="{{ site.baseurl }}/assets/images/NH.LOCAL.jpg" alt="הסמל של המחבר">
+            <!-- מומלץ לוודא שגם גודל תמונת NH.LOCAL מותאם ב-CSS -->
+            <img class="nhlocal-icon" width="24" src="{{ site.baseurl }}/assets/images/NH.LOCAL.jpg" alt="הסמל של המחבר">
           </div>
         </a>
       </div>
