--- a/docs/assets/css/personal.css
+++ b/docs/assets/css/personal.css
@@ -1396,14 +1396,12 @@ a.column-title-link i {
     flex: 1 1 auto;       /* Shortcut for: flex-grow: 1, flex-shrink: 1, flex-basis: auto */
     min-width: 0;         /* Crucial: Allow input to shrink below its content size */
     height: 38.4px;
-    padding: 6px 12px;    /* Adjust padding as needed */
+    padding: 8px 10px 2px;    /* Adjust padding as needed */
     font-size: 16px;
     border: none;         /* Remove default border */
     outline: none;        /* Remove default outline */
     background: none;     /* Ensure no background color interferes */
     border-radius: 20px;  /* Optional: match container or remove */
-    /* Remove width: auto or width: 100% */
-    /* Remove order and margin-bottom */
   }
 
   .search-icons {
