הגדרת תצוגת שירים משותפת
תצוגת רשימת שירים משותפת לכל הדפים

--- a/docs/_layouts/artist.html
+++ b/docs/_layouts/artist.html
@@ -18,7 +18,7 @@ layout: default # Inherits from default, which loads core.js, ads.js, shared-red
   </div>
 </div>
 
-<div id="resultsTable" class="custom-table"> <!-- ID is correct -->
+<div id="resultsTable" class="custom-table constrained-content-area"> <!-- ID is correct, ADDED CLASS -->
   <table>
     <thead>
       <tr>
@@ -48,12 +48,8 @@ layout: default # Inherits from default, which loads core.js, ads.js, shared-red
     </tbody>
   </table>
 
-  <!-- Load more button? (Not standard in this layout) -->
-  <!-- <button id="loadMoreButton">טען עוד</button> -->
 </div>
 
 <!-- סקריפטים ספציפיים לדף אמן -->
-<!-- search.js נדרש עבור פונקציית downloadSong (צריך להיות גלובלי) -->
-<!-- artist-page.js צריך להיטען אחרי search.js -->
 <script src="{{ site.baseurl }}/assets/js/search.js" defer></script>
 <script src="{{ site.baseurl }}/assets/js/artist-page.js" defer></script>
