--- a/docs/assets/css/personal.css
+++ b/docs/assets/css/personal.css
@@ -199,6 +199,10 @@ td {
   font-weight: bold;
 }
 
+.fixed-bottom p a {
+  margin-right: 15px;
+}
+
 /* Top navigation bar */
 .topnav {
   text-align: center;
